# aed3-tp3-cvrp

./: .gitignore  CMakeLists.txt  README.md
notebooks/: Clustering.ipynb  Times.ipynb  Viewer.ipynb  dibujo_SA.ipynb  quality.ipynb  savings_worst.ipynb  swaplist.py  swaplists.ipynb
saved/simanneal_time/: all.pickle
src/: CMakeLists.txt  cfrs.cpp  cfrs.h  cfrs2.cpp  cfrs2.h  cfrs2_main.cpp  cfrs2_time.cpp  cfrs_main.cpp  cfrs_time.cpp  cvrp.cpp  cvrp.h  main.cpp  union_find.cpp  union_find.h
src/closest/: closest.cpp  closest.h  closest_main.cpp  closest_time.cpp
src/golosa/: golosa.cpp  golosa.h  golosa_main.cpp
src/savings/: savings.cpp  savings.h  savings_main.cpp  savings_time.cpp
src/simanneal/: simanneal.cpp  simanneal.h  simanneal_main.cpp  simanneal_time.cpp
test/: CMakeLists.txt  tests.cpp
